@@ -3,6 +3,7 @@ cm4all-workshop (2.0.4) unstable; urgency=low
   * cron: store execution results in the new "cronresults" table
   * cron: implement timeout (5 minutes)
   * cron: command can be "http://" URL
+  * cron: cancel all jobs on shutdown
 
  --   
 
